<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_timer"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_timer" />
    
    <item
        android:id="@+id/nav_white_noise"
        android:icon="@android:drawable/ic_lock_silent_mode_off"
        android:title="@string/nav_white_noise" />
    
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_history" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
    
    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_about" />
</menu>
